Draft minutes 153, 17 February 2026 and RSS updates

--- a/available-prs.html
+++ b/available-prs.html
@@ -24,17 +24,20 @@
       <h1>Available pull requests</h1>
       <main>
          <p>This page lists all of the formatted pull requests that were available
-            on <b>16 Feb 2026 at 12:12 UTC</b>.
+            on <b>17 Feb 2026 at 17:32 UTC</b>.
             This often includes recently closed pull requests that are no longer
             on the dashboard.</p>
          <p>Unlike the dashboard, this page is not dynamically generated
             so it can be a little bit out-of-date.</p>
          <dl>
             <div>
-               <dt>PR <a href="https://qt4cg.org/pr/2457/">#2457</a>, <span class="open">Improved use of fos:result</span></dt>
+               <dt>PR <a href="https://qt4cg.org/pr/2467/">#2467</a>, <span class="open">Harmonize the fn: and file: functions that read text</span></dt>
             </div>
             <div>
-               <dt>PR <a href="https://qt4cg.org/pr/2456/">#2456</a>, <span class="open">Stylesheet handling of fos:result/@narrative</span></dt>
+               <dt>PR <a href="https://qt4cg.org/pr/2457/">#2457</a>, <span class="closed">Improved use of fos:result</span><span class="cdate">Closed: 17 Feb 2026</span></dt>
+            </div>
+            <div>
+               <dt>PR <a href="https://qt4cg.org/pr/2456/">#2456</a>, <span class="closed">Stylesheet handling of fos:result/@narrative</span><span class="cdate">Closed: 17 Feb 2026</span></dt>
             </div>
             <div>
                <dt>PR <a href="https://qt4cg.org/pr/2452/">#2452</a>, <span class="closed">2450 Add jnode((), *) to match root JNodes</span><span class="cdate">Closed: 10 Feb 2026</span></dt>
@@ -46,7 +49,7 @@
                <dt>PR <a href="https://qt4cg.org/pr/2449/">#2449</a>, <span class="closed">2445 Add rules for xsi namespace elements in element-to-map</span><span class="cdate">Closed: 10 Feb 2026</span></dt>
             </div>
             <div>
-               <dt>PR <a href="https://qt4cg.org/pr/2446/">#2446</a>, <span class="open">2427 Add computed node constructors to XPath</span></dt>
+               <dt>PR <a href="https://qt4cg.org/pr/2446/">#2446</a>, <span class="closed">2427 Add computed node constructors to XPath</span><span class="cdate">Closed: 17 Feb 2026</span></dt>
             </div>
             <div>
                <dt>PR <a href="https://qt4cg.org/pr/2441/">#2441</a>, <span class="closed">2434 Fix inconsistencies with GNode tests in axis steps</span><span class="cdate">Closed: 10 Feb 2026</span></dt>
