--- a/meeting/minutes/index.html
+++ b/meeting/minutes/index.html
@@ -26,6 +26,7 @@ The <a href="../agenda/">agendas</a> are also published.
 <h2 id="minutes-2026">2026</h2>
 <div class="outline-text-2" id="text-minutes-2026">
 <ul class="org-ul">
+<li><a href="./2026/02-17.html">Meeting 153</a>, 17 February</li>
 <li><a href="./2026/02-10.html">Meeting 152</a>, 10 February</li>
 <li><a href="./2026/02-03.html">Meeting 151</a>, 3 February</li>
 <li><a href="./2026/01-27.html">Meeting 150</a>, 27 January</li>
